--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   backend-user:
-    image: udagram-api-user:v2
+    image: 311865/udagram-api-user:v2
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
@@ -13,7 +13,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   backend-feed:
-    image: udagram-api-feed:v2
+    image: 311865/udagram-api-feed:v2
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
@@ -27,11 +27,11 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   frontend:
-    image: udagram-frontend:v2
+    image: 311865/udagram-frontend:v2
     ports:
       - "8100:80"
   reverseproxy:
-      image: udagram-reverseproxy:v2
+      image: 311865/udagram-reverseproxy:v2
       ports:
           - 8080:8080
       restart: always
