--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-set_env.sh
 *~
 *.sw[mnpcod]
 *.log
@@ -37,8 +36,15 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 node_modules
 venv/
+
+udagram-api.postman_collection.json
+package-lock.json
+kubectl.sha256
+kubectl
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 
+set_env.sh
