--- a/udagram-reverseproxy/nginx.conf
+++ b/udagram-reverseproxy/nginx.conf
@@ -4,10 +4,10 @@ error_log /dev/stdout debug;
 http {
     sendfile on;
     upstream user {
-        server backend-user:8080;
+        server a142e7e9a05034ed8b7e11974a32faea-1758148057.us-east-2.elb.amazonaws.com:8080;
     }
     upstream feed {
-        server backend-feed:8080;
+        server a6732f736ba584b278c8b7f3ff2ed695-1572334869.us-east-2.elb.amazonaws.com:8080;
     }
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
