--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - docker tag udagram-frontend:v7 311865/udagram-frontend:v7
   - docker tag udagram-api-user:v6 311865/udagram-api-user:v6
   - docker tag udagram-api-feed:v6 311865/udagram-api-feed:v6
+  - docker tag udagram-api:v1 311865/udagram-api:v1
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -27,3 +28,4 @@ after_success:
   - docker push 311865/udagram-frontend:v7
   - docker push 311865/udagram-api-user:v6
   - docker push 311865/udagram-api-feed:v7
+  - docker push 311865/udagram-api:v1
