--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -16,3 +16,7 @@ services:
     build:
       context: ./udagram-frontend
     image: udagram-frontend:v7
+  udagramfrontend_backend:
+    build:
+      context: ./udagram-api
+    image: udagram-api:v1
