--- a/deployment/backend-user-deployment.yaml
+++ b/deployment/backend-user-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend-user
-        image: docker.io/elochukwu/udagram-api-user:v9
+        image: docker.io/311865/udagram-api:v1
         env:
         - name: POSTGRES_USERNAME
           value: Udagramdb1
